# big-trip-server

./: Dockerfile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  crud.py  deps.py  main.py  models.py
fixtures/: activities.json  destinations.json
