[project]
name = "big-trip-server"
version = "0.1.0"
description = "API Server for Big Trip"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "orjson>=3.10.15",
    "pydantic-settings>=2.8.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.1",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
